Added support for searching

--- a/root/index.html
+++ b/root/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <title>Recipes</title>
     <script src="lib/jquery/jquery.min.js"></script>
@@ -9,12 +10,14 @@
     <link rel="stylesheet" type="text/css" href="lib/jquery/jquery-ui.min.css">
     <link rel="stylesheet" type="text/css" href="lib/jquery/jquery-ui.theme.min.css">
     <link rel="stylesheet" type="text/css" href="lib/jquery/jquery-ui.structure.min.css">
-  </head>
-  <body>
+</head>
+
+<body>
     <header></header>
-    <main></main>
+    <main class="open-content"></main>
 
     <!-- Bottom of the document -->
-	<script src="lib/bundle.js"></script>
-  </body>
+    <script src="lib/bundle.js"></script>
+</body>
+
 </html>
