Start of the left navigation and page architecture

--- a/root/index.html
+++ b/root/index.html
@@ -14,7 +14,10 @@
 
 <body>
     <header></header>
-    <main class="open-content"></main>
+    <div class="site-body">
+        <main class="open-content"></main>
+        <nav class="navigation"></nav>
+    </div>
 
     <!-- Bottom of the document -->
     <script src="lib/bundle.js"></script>
