--- a/root/index.html
+++ b/root/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="lib/jquery/jquery-ui.min.css">
     <link rel="stylesheet" type="text/css" href="lib/jquery/jquery-ui.theme.min.css">
     <link rel="stylesheet" type="text/css" href="lib/jquery/jquery-ui.structure.min.css">
+    <link rel="stylesheet" type="text/css" href="style/themify-icons.css" />
 </head>
 
 <body>
