--- a/root/index.html
+++ b/root/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header></header>
+    <header class="site-header"></header>
     <div class="site-body">
         <main class="open-content"></main>
         <nav class="navigation"></nav>
