--- a/root/index.html
+++ b/root/index.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="utf-8" />
     <title>Recipes</title>
-    <script src="lib/jquery/jquery.min.js"></script>
-    <script src="lib/jquery/jquery-ui.min.js"></script>
+    <script src="lib/jQuery/jquery.min.js"></script>
+    <script src="lib/jQuery/jquery-ui.min.js"></script>
+    <script src="lib/Croppic/croppic.js"></script>
 
     <link rel="stylesheet" type="text/css" href="lib/jquery/jquery-ui.min.css">
     <link rel="stylesheet" type="text/css" href="lib/jquery/jquery-ui.theme.min.css">
     <link rel="stylesheet" type="text/css" href="lib/jquery/jquery-ui.structure.min.css">
     <link rel="stylesheet" type="text/css" href="style/themify-icons.css" />
+    <link rel="stylesheet" type="text/css" href="style/croppic.css" />
 </head>
 
 <body>
