--- a/root/index.html
+++ b/root/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <title>Recipes</title>
     <link rel="stylesheet" type="text/css" href="style/themify-icons.css" />
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon.png">
+    <link rel="icon" type="image/png" sizes="114x114"  href="images/favicon.png">
 </head>
 
 <body>
